# antol

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  BACKEND_FIX_GUIDE.md  BACKEND_POWERSHELL_GUIDE.md  BUILD_MACOS.md  BUILD_WINDOWS.md  CHANGELOG.md  COMPLETE-MVP-CURSOR-INSTRUCTIONS.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RUNBOOK.md  DEPLOY_TO_SERVER.md  DEPLOY_WITHOUT_DOMAIN.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_SETUP_WINDOWS.md  Makefile  NETWORK_ERROR_FIX.md  NEXT_STEPS.md  OPEN_PORT_GUIDE.md  PROJECT_HEALTH_CHECK.md  PROJECT_SUMMARY.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  RUN_ON_MAC.md  RUN_ON_MAC_LOCAL.md  START_BACKEND_WINDOWS.ps1  START_DEMO.md  TROUBLESHOOTING.md  USER_GUIDE_ADMIN.md  USER_GUIDE_CLIENT.md  antidetect-backend.service  azure-port-helper.sh  (+23 more)
.github/: GITHUB_ACTIONS.md
.github/workflows/: build-all-platforms.yml  build-apps.yml  build-macos.yml  ci.yml  macos-build.yml  release.yml  windows-build.yml  windows-only.yml
.idx/: dev.nix
DEBUG_VERSION/: AdminApp-Debug.msi  README.md
FINAL_RELEASE/: AdminApp-Setup.msi  README.md
FINAL_RELEASE_v2/: AdminApp-Setup.msi  README.md
WORKING_VERSION/: AdminApp-WORKING.msi  ClientApp-WORKING.msi  README.md
anti-detect-mvp/: .env  .env.example  docker-compose.production.yml  docker-compose.yml  nginx.conf
anti-detect-mvp/admin-app/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
anti-detect-mvp/admin-app/src/: App.css  App.tsx  api.ts  store.ts
anti-detect-mvp/admin-app/src-tauri/: Cargo.toml  generate_icons.py  tauri.conf.json
anti-detect-mvp/backend/: .env  .env.example  Cargo.toml  Dockerfile
anti-detect-mvp/backend/.sqlx/: query-3a139ab41e70266ab6a4860bcd460f464c62c6b2ef8ae25646c1b37395ac0c88.json
anti-detect-mvp/backend/config/: test.toml
anti-detect-mvp/backend/migrations/: 001_init.sql  002_proxies.sql  003_profiles.sql  004_licenses.sql  005_complete_schema.sql
anti-detect-mvp/backend/src/: config.rs  email.rs  lib.rs  main.rs  models.rs  models.rs.backup  state.rs  two_factor.rs
anti-detect-mvp/backend/src/handlers/: auth.rs  dashboard.rs  licenses.rs  mod.rs  profiles.rs  proxies.rs  users.rs
anti-detect-mvp/backend/src/models/: mod.rs  user.rs
anti-detect-mvp/backend/tests/: licenses_dashboard.rs
anti-detect-mvp/backend/tests/migrations/: 001_init.sql
anti-detect-mvp/client-app/: .env  .env.example  nginx.conf  package-lock.json  package.json  vite.config.ts
anti-detect-mvp/client-app/src-tauri/: Cargo.toml  generate_icons.py  tauri.conf.json
anti-detect-mvp/license-server/: Cargo.toml
client-app-windows/msi/: client-app_0.0.0_x64_en-US.msi
client-windows-artifacts/msi/: client-app_0.0.0_x64_en-US.msi
installers/: AdminApp-Setup.msi
(+35 files in other folders)
